welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: not found: value prendreBiscuit
prendreBiscuit()
^Variables:9: error: not found: value reculer
  reculer();
  ^